# phonetic

./: .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml  readme.md
include/: convenience.hpp  phonetic.hpp
src/: CMakeLists.txt  phonetic.cpp  phoneticpy.cpp
src/phoneticpy/: __init__.py
tests/: CMakeLists.txt  test_phonetic.cpp  tests_phoneme.cpp
